// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render Expense totals with multiple expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
       Viewing 
      <span>
        3
      </span>
       
      expenses
       totalling 
      <span>
        $53.67
      </span>
         
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button_two"
        replace={false}
        to="/create"
      >
         Create Expense 
      </Link>
    </div>
  </div>
</div>
`;

exports[`should correctly render Expense totals with one expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
       Viewing 
      <span>
        1
      </span>
       
      expense
       totalling 
      <span>
        $4.56
      </span>
         
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button_two"
        replace={false}
        to="/create"
      >
         Create Expense 
      </Link>
    </div>
  </div>
</div>
`;
